hphp/test/zend/good/ext/zip/tests/bug53854.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if(!extension_loaded('zip')) die('skip');
}
