hphp/test/zend/bad/ext/openssl/tests/bug65538_002.php.skipif
<?php
if (!extension_loaded('openssl')) die('skip, openssl required');
if (getenv("SKIP_ONLINE_TESTS")) die("skip online test");